corrected image file path for visibilitz on mz szstem

--- a/css/@media.css
+++ b/css/@media.css
@@ -1,6 +1,7 @@
 @media (max-width: 499px) {
   body {
-    background: url("/image/logom.png") no-repeat !important;
+    /* background: url("/image/logom.png") no-repeat !important; */
+    background: url("../image/logom.png") no-repeat !important;
     background-size: cover !important;
     background-position: center !important;
   }
